--- a/index.html
+++ b/index.html
@@ -31,30 +31,13 @@
       "
     >
       <p style="color: white; margin-top: 1750px; text-align: center">
-        ok nice saw through the decoy this time
+        ok nice saw through the decoy this time <br></br>
       </p>
-      <p style="color: white; text-align: center">
-        there are 2 prime numbers in the initial insta post entziffern
-      </p>
-      <p style="color: white; text-align: center">
-        another prime is related to this location:
-      </p>
-      <p style="color: white; text-align: center">
-        https://www.google.com/maps/@38.8692554,-77.0538059,3a,90y,134.91h,92.02t/data=!3m11!1e1!3m9!1sAF1QipO6akO1UsE_cx-h4npUEeTSC7gdX1Cg5Zvdd80j!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipO6akO1UsE_cx-h4npUEeTSC7gdX1Cg5Zvdd80j%3Dw203-h100-k-no-pi-0-ya24.821732-ro-0-fo100!7i10000!8i5000!9m2!1b1!2i22
-      </p>
-
-      <p style="color: white; text-align: center">
-        multiply all them along with 3301 and put the pruduct in the X
-        https://ie.nitk.ac.in/blog/2022/01/16/X/ <br /><br />
-        eg2 if its 500 the link will be
-        https://ie.nitk.ac.in/blog/2022/01/16/500/
-        <br />
-        <br />
-        eg3 if X is 2123243535 the link will be
-        https://ie.nitk.ac.in/blog/2022/01/16/2123243535/
+      <p>
+        wepl i dont think this has to be told as you took the red pill but its a skill one must have to rellaly look deep and inspect every element you see in any puzzel to progress further
       </p>
     </div>
 
-    <!-- HINT ::----- the location is the US  ministry of defence the building is called the pentagon because the building has 5 sides and is shaped as a regular pentagon-->
+    <!-- Clue ::----- nvjgj blfdq ivebg gphet nkbbp slgcc izisn dpslj wbzbw qfzus unqap siayd pyjxj nirfb vhums kwzjy ommcp ypwju fhmlk eribp tbqbb cxufv vmpoh qvagl yrxmm dlgzc fvwnf yprbj uihaa ziawl lub-->
   </body>
 </html>
