--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       "
     >
       <p style="color: white; margin-top: 1750px; text-align: center">
-        ok nice saw through the decoy this time <br></br>
+        ok nice saw through the decoy this time 
       </p>
       <p>
         wepl i dont think this has to be told as you took the red pill but its a skill one must have to rellaly look deep and inspect every element you see in any puzzel to progress further
