--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         ok nice saw through the decoy this time 
       </p>
       <p>
-        wepl i dont think this has to be told as you took the red pill but its a skill one must have to rellaly look deep and inspect every element you see in any puzzel to progress further
+        wepl i dont think this has to be told as you took the red pill but its a skill one must have to really look deep and inspect every element you see in any puzzel to progress further
       </p>
     </div>
 
