--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       "
     >
       <p style="color: white; margin-top: 1750px; text-align: center">
-        ok nice saw through the decoy this time 
+        ok nice saw through the decoy this time (there is another clue in this webpage think about background color and foreground color and contrast - also text color and visibility)
       </p>
       <p style="color: white; margin-top: 1750px; text-align: center">
         wepl i dont think this has to be told as you took the red pill but its a skill one must have to really look deep and inspect every element you see in any puzzel to progress further
